--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -50,11 +50,100 @@
     "\n",
     "Solve the exercise by implementing the steps using the Python concepts of lists, dictionaries, sets, and basic input/output operations. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirt': '5', 'mug': '5', 'hat': '5', 'book': '5', 'keychain': '5'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Ask the user to input the quantity of each product available in the inventory. \n",
+    "# Use the product names from the `products` list as keys in the `inventory` dictionary \n",
+    "# and assign the respective quantities as values.\n",
+    "\n",
+    "quantity_t_shirt = input(\"Enter the quantity of t-shirt: \")\n",
+    "inventory['t-shirt'] = quantity_t_shirt\n",
+    "quantity_mug = input(\"Enter the quantity of mug: \")\n",
+    "inventory['mug'] = quantity_mug\n",
+    "quantity_hat = input(\"Enter the quantity of hat: \")\n",
+    "inventory['hat'] = quantity_hat\n",
+    "quantity_book = input(\"Enter the quantity of book: \")\n",
+    "inventory['book'] = quantity_book\n",
+    "quantity_keychain = input(\"Enter the quantity of keychain: \")\n",
+    "inventory['keychain'] = quantity_keychain\n",
+    "\n",
+    "print(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Create an empty set called `customer_orders`.\n",
+    "\n",
+    "customer_orders = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['t-shirt,', 'mug']\n",
+      "{'banana, coma', 't-shirt, banana', 'bana', 't-shirt, mug, hat'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Ask the user to input the name of three products that a \n",
+    "# customer wants to order (from those in the products list, \n",
+    "# meaning three products out of \"t-shirt\", \"mug\", \"hat\", \"book\"\n",
+    "# or \"keychain\". Add each product name to the `customer_orders` \n",
+    "# set.\n",
+    "\n",
+    "user_input1 = input(f'Enter one product from {products}: ')\n",
+    "user_input2 = input(f'Enter another product from {products}: ')\n",
+    "user_input3 = (f'Enter one last product from {products}: ')\n",
+    "\n",
+    "print(customer_orders)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -68,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
