lab-python-data-structures: resolved

--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'t-shirt': '5', 'mug': '5', 'hat': '5', 'book': '5', 'keychain': '5'}\n"
+      "{'t-shirt': 5, 'mug': 5, 'hat': 5, 'book': 5, 'keychain': 5}\n"
      ]
     }
    ],
@@ -87,15 +87,15 @@
     "# Use the product names from the `products` list as keys in the `inventory` dictionary \n",
     "# and assign the respective quantities as values.\n",
     "\n",
-    "quantity_t_shirt = input(\"Enter the quantity of t-shirt: \")\n",
+    "quantity_t_shirt = int(input(\"Enter the quantity of t-shirt: \"))\n",
     "inventory['t-shirt'] = quantity_t_shirt\n",
-    "quantity_mug = input(\"Enter the quantity of mug: \")\n",
+    "quantity_mug = int(input(\"Enter the quantity of mug: \"))\n",
     "inventory['mug'] = quantity_mug\n",
-    "quantity_hat = input(\"Enter the quantity of hat: \")\n",
+    "quantity_hat = int(input(\"Enter the quantity of hat: \"))\n",
     "inventory['hat'] = quantity_hat\n",
-    "quantity_book = input(\"Enter the quantity of book: \")\n",
+    "quantity_book = int(input(\"Enter the quantity of book: \"))\n",
     "inventory['book'] = quantity_book\n",
-    "quantity_keychain = input(\"Enter the quantity of keychain: \")\n",
+    "quantity_keychain = int(input(\"Enter the quantity of keychain: \"))\n",
     "inventory['keychain'] = quantity_keychain\n",
     "\n",
     "print(inventory)"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,8 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['t-shirt,', 'mug']\n",
-      "{'banana, coma', 't-shirt, banana', 'bana', 't-shirt, mug, hat'}\n"
+      "{'mug', 't-shirt', 'hat'}\n"
      ]
     }
    ],
@@ -135,9 +134,123 @@
     "\n",
     "user_input1 = input(f'Enter one product from {products}: ')\n",
     "user_input2 = input(f'Enter another product from {products}: ')\n",
-    "user_input3 = (f'Enter one last product from {products}: ')\n",
+    "user_input3 = input(f'Enter one last product from {products}: ')\n",
+    "customer_orders.add(user_input1)\n",
+    "customer_orders.add(user_input2)\n",
+    "customer_orders.add(user_input3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. Print the products in the `customer_orders` set.\n",
     "\n",
     "print(customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Calculate the following order statistics:\n",
+    "# - Total Products Ordered: The total number of products \n",
+    "# in the `customer_orders` set.\n",
+    "# - Percentage of Products Ordered: The percentage of products \n",
+    "# ordered compared to the total available products.\n",
+    "# Store these statistics in a tuple called `order_status`.\n",
+    "\n",
+    "total_products_ordered = len(customer_orders)\n",
+    "percentage_of_prodcuts_ordered = total_products_ordered/len(products)*100\n",
+    "order_status = (total_products_ordered, percentage_of_prodcuts_ordered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order Statistics:\n",
+      "Total Products Ordered: <3>.\n",
+      "Percentage of Products Ordered: <60.0>%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8. Print the order statistics using the following format:\n",
+    "#  ```\n",
+    "#  Order Statistics:\n",
+    "#  Total Products Ordered: <total_products_ordered>\n",
+    "#  Percentage of Products Ordered: <percentage_ordered>% \n",
+    "#  ```\n",
+    "print(\n",
+    "    f'Order Statistics:\\n'\n",
+    "    f'Total Products Ordered: <{total_products_ordered}>.\\n'\n",
+    "    f'Percentage of Products Ordered: <{percentage_of_prodcuts_ordered}>%'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirt': 4, 'mug': 4, 'hat': 4, 'book': 5, 'keychain': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9. Update the inventory by subtracting 1 from the quantity \n",
+    "# of each product. Modify the `inventory` dictionary accordingly.\n",
+    "\n",
+    "inventory[\"t-shirt\"] -= 1\n",
+    "inventory[\"mug\"] -= 1\n",
+    "inventory[\"hat\"] -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the upadted inventory: \n",
+      "T-shirt: 4\n",
+      "Mug: 4\n",
+      "Hat: 4\n",
+      "Book: 5\n",
+      "Keychain: 5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10. Print the updated inventory, displaying the quantity \n",
+    "# of each product on separate lines.\n",
+    "\n",
+    "print(\n",
+    "    f'This is the upadted inventory: \\n'\n",
+    "    f'T-shirt: {inventory[\"t-shirt\"]}\\n'\n",
+    "    f'Mug: {inventory[\"mug\"]}\\n'\n",
+    "    f'Hat: {inventory[\"hat\"]}\\n'\n",
+    "    f'Book: {inventory[\"book\"]}\\n'\n",
+    "    f'Keychain: {inventory[\"keychain\"]}\\n'\n",
+    ")"
    ]
   }
  ],
