--- a/lab-python-data-structures.ipynb
+++ b/lab-python-data-structures.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,17 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'mug', 't-shirt', 'hat'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. Ask the user to input the name of three products that a \n",
     "# customer wants to order (from those in the products list, \n",
@@ -142,9 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mug', 'hat', 'book'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. Print the products in the `customer_orders` set.\n",
     "\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -200,29 +200,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'t-shirt': 4, 'mug': 4, 'hat': 4, 'book': 5, 'keychain': 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 9. Update the inventory by subtracting 1 from the quantity \n",
     "# of each product. Modify the `inventory` dictionary accordingly.\n",
     "\n",
     "inventory[\"t-shirt\"] -= 1\n",
     "inventory[\"mug\"] -= 1\n",
-    "inventory[\"hat\"] -= 1"
+    "inventory[\"hat\"] -= 1\n",
+    "inventory[\"book\"] -= 1\n",
+    "inventory[\"keychain\"] -= 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -233,8 +227,8 @@
       "T-shirt: 4\n",
       "Mug: 4\n",
       "Hat: 4\n",
-      "Book: 5\n",
-      "Keychain: 5\n",
+      "Book: 4\n",
+      "Keychain: 4\n",
       "\n"
      ]
     }
